syntax = "proto3";

package main_server;

service MainServerService {
  rpc add_checksum(AddChecksumRequest) returns (EmptyResponse);
}

message EmptyResponse {}

message BlockInfo {
  bytes block_id = 1;
  uint64 part = 2;
  string endpoint = 3;
}

message AddChecksumRequest {
  string filename = 1;
  BlockInfo block = 2;
  uint32 checksum = 3;
}